2001-01-11  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/Makefile.am [BUILD_EXAMPLE_KERNEL] (noinst_DATA): New
	variable.
	[BUILD_EXAMPLE_KERNEL] (noinst_PROGRAMS): Likewise.
	[BUILD_EXAMPLE_KERNEL] (kernel_exec_SOURCES): Likewise.
	[BUILD_EXAMPLE_KERNEL] (kernel_exec_CFLAGS): Likewise.
	[BUILD_EXAMPLE_KERNEL] (kernel_exec_LDFLAGS): Likewise.
	[BUILD_EXAMPLE_KERNEL] (kernel): New target.
	* configure.in (--enable-example-kernel): New option.

	* docs/kernel.c (cmain): Cast unsigned long variables to
	unsigned explicitly, to suppress GCC warnings.
	
2001-01-08  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/shared.h (BOOTSEC_BPB_HIDDEN_SECTORS): New macro.
	
	* stage2/builtins.c (chainloader_func): If CURRENT_PARTITION is
	FAT, set the hidden sectors field of the BPB to PART_START, to
	avoid a Windows bug which affects only when Windows is booted
	from a logical partition. And, clear ERRNUM after testing if a
	partition is FAT, because open_partition or fat_mount may set
	ERRNUM. Reported by Ingo Korb <ingo@akana.de>.
	
2001-01-07  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (boot_func): In the chain-loading mode,
	clear the active flag of each of the loaded partition entries,
	and then set the active flag of the booted partition image.
	
2001-01-04  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/builtins.c (embed_func): Call open_partition() even for
 	MBR, so that part_start is correct.  This fixes a bug reported by
 	Matthias Granberry <matthias@slurpee.org>.
	
2000-12-22  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/disk_io.c (make_saved_active): Change the variable name
	``MBR'' to lower case.
	(set_partition_hidden_flag): Likewise.
	
2000-12-20  Jochen Hoenicke  <jochen@gnu.org>

	From Cedric Ware <ware@com.enst.fr>:
	* stage2/fsys_ext2.c (ext2fs_mount): Detect ext2 partitions in
	a OpenBSD/NetBSD FS_EXT2FS slice.
	* stage2/pc_slice.h (FS_ADOS): New Macro from OpenBSD/NetBSD.
	(FS_HFS): Likewise.
	(FS_FILECORE): Likewise.
	(FS_EXT2FS): Likewise.
	