@@ -22,6 +22,7 @@ Edmund GRIMLEY EVANS <edmundo@rano.demon.co.uk>
 Edward Killips <ekillips@triton.net>
 Eric Hanchrow <erich@microsoft.com>
 Erik Schoenfelder <schoenfr@gaertner.de>
+Eugene Doudine <dudin@np.nk.nornik.ru>
 Frank Mehnert <fm3@os.inf.tu-dresden.de>
 Goran Koruga <goran.koruga@hermes.si>
 Hal Snyder <hal@vailsys.com>
